feat: implement employee create route
