# src/api/index.ts
@@ -1,1 +1,2 @@
 export * as authControllers from "@/api/v1/auth";
+export * as employeeControllers from "@/api/v1/employee";
